// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <GifExpertApp /> should show a categories list 1`] = `
<Fragment>
  <h1>
    Gift Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      id="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      id="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Test in <GifExpertApp /> should show corectly 1`] = `
<Fragment>
  <h1>
    Gift Expert App
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;
